Adjacent cell will be revealed while them does not have near mines
  * AWS stuff
  * Flag action
